# ScholarMind

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: agents.yaml  default.yaml  development.yaml  memory.yaml  production.yaml  rag.yaml
scripts/: annotate_current_real_user_questions.py  annotate_real_user_questions.py  arxiv_run_logging.py  build_locomo_dataset.py  deploy.sh  download_recent_arxiv.py  ingest_local_arxiv.py  ingest_recent_arxiv.py  init.sh  probe_deepseek_structured.py  probe_single_request.py  refine_rag_annotations.py  run_locomo_v2_eval.py  stop.sh  translate_chinese_rag_references.py  validate_rag_e2e.py
static/: index.html
tests/: conftest.py  test_api.py  test_asgi_import.py  test_common.py  test_daily_chat.py  test_embeddings.py  test_frontend_request_detail.py  test_graph_state.py  test_locomo_benchmark.py  test_locomo_build_cli.py  test_locomo_build_dialogue.py  test_locomo_build_e2e_smoke.py  test_locomo_build_questions.py  test_locomo_build_schema.py  test_locomo_build_seeds.py  test_locomo_build_validate.py  test_locomo_official.py  test_locomo_scoring.py  test_locomo_v2_runner.py  test_memory_admission.py  test_memory_consistency_audit.py  test_memory_consistency_cli.py  test_memory_decay.py  test_memory_eval_surface.py  test_memory_eval_v2.py  test_memory_extraction.py  test_memory_management.py  test_memory_manager.py  test_memory_operations.py  test_memory_real_queries.py  test_memory_repository.py  test_messages.py  test_orchestrator.py  test_paper_reader.py  test_pending_memory_flow.py  (+18 more)
(+129 files in other folders)
