[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scholar-mind"
version = "0.1.0"
description = "ScholarMind MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "anyio>=4.4.0",
  "celery>=5.4.0",
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "langchain-core>=0.3.0",
  "langchain-openai>=0.3.0",
  "langgraph>=0.2.0",
  "langgraph-checkpoint-sqlite>=2.0.0",
  "openai>=1.40.0",
  "pymupdf>=1.24.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "pyyaml>=6.0.0",
  "qdrant-client>=1.17.1,<1.18.0",
  "redis>=5.0.0",
  "ragas>=0.4.1,<1.0",
  "sqlalchemy>=2.0.0",
  "structlog>=24.4.0",
  "typer>=0.12.0",
  "uvicorn>=0.30.0",
  "langchain>=1.2.15",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
  "ruff>=0.5.0",
]
local-ml = [
  "sentence-transformers>=3.0.0",
]

[project.scripts]
scholar = "scholar_mind.main:cli_app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
